Fix portfolio not responsive on tablet

--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,6 @@
 
 body {
   width: 100%;
-  background-image: url("images/image1.png");
-  background-repeat: no-repeat;
 }
 
 .navbar {
@@ -24,7 +22,8 @@ body {
   width: 111px;
   height: 74px;
   right: 50px;
-  visibility: hidden;
+  margin-left: -8%;
+  margin-top: -5%;
 }
 
 .hamburger {
@@ -46,11 +45,7 @@ body {
 
 /* Navbar Desktop version */
 
-@media screen and (min-width: 800px) {
-  body {
-    background-image: none;
-  }
-
+@media screen and (min-width: 768px) {
   .hamburger {
     display: none;
   }
@@ -122,8 +117,16 @@ p {
   color: #1a2236;
 }
 
+#title_image {
+  display: none;
+}
+
 /* Animation on desktop version of header title and description */
 @media screen and (min-width: 768px) {
+  #title_image {
+    display: flex;
+  }
+
   #header-title {
     animation-name: leftToOnThePlace;
     animation-duration: 2.5s;
@@ -191,31 +194,13 @@ p {
   padding-bottom: 46.8%;
 }
 
-#title_section {
-  padding: none;
-  padding-top: 10%;
-}
-
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 768px) {
   .section {
-    background-image: url(/images/Group\ 2.png);
-    background-position: right;
-    background-repeat: no-repeat;
-    height: calc(95vh - 150px);
-  }
-
-  .section h1 {
-    font-size: 110px;
-  }
-
-  .section p {
-    width: 35%;
-    padding-bottom: 4%;
-    padding-top: 5%;
-  }
-
-  .section .button {
-    width: 18%;
+    width: 100%;
+    height: calc(80vh - 76px);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 0;
   }
 
   .section-image {
@@ -223,14 +208,37 @@ p {
   }
 
   #title_section {
-    padding: 140px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .titl-info-wrapper {
+    max-width: 484px;
+    padding: 20px;
+  }
+
+  .section h1 {
+    font-size: 110px;
+  }
+
+  /* .section p {
+    /* width: 35%;
+    padding-bottom: 4%;
+    padding-top: 5%; */
+
+  /* } */
+
+  .section .button {
+    width: 18%;
   }
 }
 
 .container {
   display: flex;
   flex-direction: column;
-  width: 100;
+  width: 100%;
   position: relative;
 }
 
@@ -257,115 +265,12 @@ p {
   display: flex;
 }
 
-@media screen and (min-width: 800px) {
-  .card_content-web {
-    display: grid;
-    grid-template-columns: 1fr;
-  }
-
-  #mobile-title {
-    display: none;
-  }
-}
-
-.item1 {
-  display: grid;
-  grid-template-columns: 1.5fr 2.5fr;
-}
-
-.item1-rightpanel {
-  width: 100%;
-  height: 100%;
-  padding-left: 74%;
-}
-
-#card-title-web {
-  transform-origin: 0 0;
-  transform: rotate(-90deg);
-  font-size: 110px;
-  padding-left: 0;
-  position: absolute;
-  left: 145px;
-  top: 610px;
-}
-
-.item1-leftpanel {
-  position: relative;
-}
-
-.card_image-web {
-  width: 100%;
-  height: 100%;
-}
-
-.card-info-web {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  width: 100%;
-  height: 50%;
-  background-color: #1a2236;
-  padding: 60px;
-}
-
-.item2 {
-  display: flex;
-}
-
-.item2-left {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1.3fr;
-}
-
-.item2-left #item2_img {
-  margin-top: 101px;
-}
-
-.item2-right {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: flex-end;
-  padding-top: 8%;
-}
-
-.item2-right-content {
-  width: 100%;
-  height: 50%;
-  background-color: #1a2236;
-  padding: 60px;
-}
-
-.item2-right-content h3 {
-  font-size: 40px;
-  font-weight: 700;
-  padding-bottom: 20px;
-}
-
-.item2 img {
-  width: 100%;
-}
-
-.item3 {
-  display: grid;
-  grid-template-columns: 1fr 0fr 1fr;
-}
-
-.item4 {
-  display: flex;
-  flex-direction: row;
-}
-
-.item4 #img1 {
-  margin-top: -300px;
-}
-
-@media screen and (min-width: 800px) {
+/* Work section desktop */
+@media screen and (min-width: 768px) {
   .works {
     display: flex;
     position: relative;
-    padding-top: 15%;
+    padding-top: 22%;
   }
 
   .works #web_img {
@@ -375,6 +280,137 @@ p {
 
   .works .grid-container {
     display: none;
+  }
+
+  .card_content-web {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  #mobile-title {
+    display: none;
+  }
+
+  .item1 {
+    display: grid;
+    grid-template-columns: 1.5fr 2.5fr;
+  }
+
+  .item1-rightpanel {
+    position: relative;
+  }
+
+  #dot-img {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+
+  .card-info-web .card_title {
+    font-weight: 700;
+    font-size: 30px;
+  }
+
+  .card_content-web .card_btn {
+    color: black;
+    background: white;
+  }
+
+  #card-title-web {
+    position: absolute;
+    top: 25%;
+    left: -10%;
+    transform: rotate(-90deg);
+    font-size: 90px;
+    padding: 0;
+  }
+
+  .item1-leftpanel {
+    position: relative;
+  }
+
+  .card_image-web {
+    width: 100%;
+    height: 100%;
+  }
+
+  .card-info-web {
+    width: 100%;
+    height: 66.333%;
+    position: absolute;
+    top: 33.333%;
+    left: 0;
+    background-color: #1a2236;
+    padding: 5%;
+  }
+
+  .item2-left {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .item2-right {
+    position: relative;
+    margin-top: 5%;
+  }
+
+  .item2-right-content {
+    width: 100%;
+    height: 50%;
+    background-color: #1a2236;
+    padding: 5%;
+  }
+
+  .item2-right-content h3 {
+    font-size: 20px;
+    font-weight: 700;
+    padding-bottom: 20px;
+  }
+
+  #item2_img {
+    width: 100%;
+    height: 241px;
+    margin-top: 15%;
+  }
+
+  #item3_img {
+    width: 100%;
+    height: 312px;
+  }
+
+  .item2-right-content .span_button {
+    line-height: 5.5;
+  }
+
+  .item3 {
+    display: grid;
+    grid-template-columns: 1fr 0fr 1fr;
+    margin-top: -0.4%;
+  }
+
+  .item4 {
+    display: grid;
+    grid-template-columns: 1.26fr 1fr;
+  }
+
+  .item4 #img1 {
+    width: 100%;
+    height: 440px;
+    margin-top: -195px;
+  }
+
+  .item4 #img2 {
+    height: 253px;
+    width: 100%;
+    margin-top: -1%;
+  }
+
+  .btn.card_btn4,
+  .btn.card_btn5,
+  .btn.card_btn6 {
+    padding: 0.5rem;
+    font-size: 12px;
   }
 }
 
@@ -403,7 +439,6 @@ p {
   color: #fff;
   font-size: 16px;
   font-weight: 500;
-  position: absolute;
   width: 178px;
   height: 44px;
   cursor: pointer;
@@ -422,7 +457,7 @@ p {
 }
 
 .span_button {
-  line-height: 7.5;
+  line-height: 6.5;
 }
 
 ul {
@@ -488,6 +523,11 @@ ul {
   line-height: 30px;
 }
 
+.skills_web {
+  display: grid;
+  gap: 18px;
+}
+
 .language {
   color: #fff;
   width: 100%;
@@ -537,13 +577,12 @@ ul {
   display: none;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 1190px) {
   .skills_section {
     display: flex;
     flex-direction: row-reverse;
-    align-items: center;
     align-items: baseline;
-    padding: 160px;
+    padding: 100px;
   }
 
   .about h2 {
@@ -639,10 +678,10 @@ input[type=submit]:hover {
   justify-content: center;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 768px) {
   input[type=submit] {
-    width: 40%;
-    margin-left: 240px;
+    width: 50%;
+    margin-left: 30%;
   }
 
   .contact_section {
@@ -652,30 +691,31 @@ input[type=submit]:hover {
     background-size: 20% 30%;
   }
 
+  .contact-page {
+    width: 100%;
+    padding-left: 7%;
+  }
+
   .text_area {
     padding: 15%;
     padding-bottom: 0%;
+    margin-top: -201px;
   }
 
   .text_area p {
+    padding-top: 4%;
     width: 80%;
   }
 
   .form_section {
     display: flex;
     width: 75%;
-    padding-left: 190px;
+    padding-left: 105px;
   }
 
   .contact_section h2 {
-    font-size: 110px;
-  }
-
-  .contact-page {
-    margin-top: -13%;
-    margin-left: 273px;
-    margin-right: 180px;
-    margin-bottom: 59px;
+    font-size: 84px;
+    padding-top: 29%;
   }
 }
 
@@ -729,7 +769,7 @@ footer {
   float: left;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 768px) {
   footer {
     position: none;
     height: 123px;
